--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <!-- Producto Principal -->
         <div class="product-section">
             <div class="product-image">
-                <img src="https://i.imgur.com/4ZqKX9L.jpeg" alt="Hyalu B5 Serum La Roche-Posay">
+                <img src="/images/product1.png" alt="Hyalu B5 Serum La Roche-Posay">
             </div>
             
             <h2 class="product-title">Hyalu B5 Serum</h2>
