--- a/index.html
+++ b/index.html
@@ -60,14 +60,22 @@
             transform: translateY(-5px) scale(1.02);
         }
 
-                    .product-image::before {
+        .product-image::before {
             content: '';
             position: absolute;
             top: 0;
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 250"><defs><linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:%23ffffff;stop-opacity:1" /><stop offset="100%" style="stop-color:%23f0e6dc;stop-opacity:1" /></linearGradient></defs><rect x="60" y="30" width="80" height="190" rx="15" fill="url(%23grad1)" stroke="%239C7A5C" stroke-width="2"/><ellipse cx="100" cy="70" rx="20" ry="20" fill="%23D4B5A0" opacity="0.6"/><text x="100" y="230" text-anchor="middle" font-family="Arial" font-size="12" fill="%239C7A5C" font-weight="bold">HYALU B5</text></svg>') center/contain no-repeat;
+        }
+
+        .product-image img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            border-radius: 20px;
+            position: relative;
+            z-index: 1;
         }
 
         .product-title {
